@@ -1,24 +1,39 @@
 package gui.AboutUs;
 
 import javafx.fxml.FXML;
+import javafx.fxml.Initializable;
 
+import java.awt.*;
 import java.io.IOException;
+import java.net.URL;
+import java.util.ResourceBundle;
 
-public class AboutControlller  {
+public class AboutControlller implements Initializable {
+    // MAC use Runtime.getRuntime().exec(new String[]{"/usr/bin/open", "-a", "/Applications/Google Chrome.app", "write URL here"});
     @FXML
     public void OpenLinkQuan () throws IOException {
-        String url ="https://github.com/anhquan7826";
-        Runtime.getRuntime().exec("open " +url);
-
+        // Window
+        Runtime.getRuntime().exec(new String[]{"cmd", "/c", "start chrome https://github.com/anhquan7826"});
+        // Linux
+        // Runtime.getRuntime().exec(new String[]{"bash", "-c", "/path/to/chrome https://github.com/anhquan7826"});
     }
     @FXML
     public void OpenLinkHa () throws IOException {
-        String url ="https://github.com/Lppt12345";
-        Runtime.getRuntime().exec("open " +url);
+        // Window
+        Runtime.getRuntime().exec(new String[]{"cmd", "/c", "start chrome https://github.com/Lppt12345"});
+        // Linux
+        // Runtime.getRuntime().exec(new String[]{"bash", "-c", "/path/to/chrome https://github.com/Lppt12345"});
     }
     @FXML
     public void OpenProject() throws IOException {
-        String url ="https://github.com/anhquan7826/dictionary";
-        Runtime.getRuntime().exec("open " +url);
+        // Window
+        Runtime.getRuntime().exec(new String[]{"cmd", "/c", "start chrome https://github.com/anhquan7826/dictionary"});
+        // Linux
+        // Runtime.getRuntime().exec(new String[]{"bash", "-c", "/path/to/chrome https://github.com/anhquan7826/dictionar"});
+    }
+
+    @Override
+    public void initialize(URL url, ResourceBundle resourceBundle) {
+
     }
 }
